[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/chest-sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/props/chest_one/Chest_One.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.982, 22.4289 )

[sub_resource type="Animation" id=2]
resource_name = "chest_open"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "closed"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Chest_One" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -14.8535, -16.5186 )
texture = ExtResource( 1 )
centered = false
hframes = 7
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.78632 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -21.3377 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chest_open = SubResource( 2 )
anims/closed = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Chest_One_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Chest_One_body_exited"]
[connection signal="chest_empty" from="." to="." method="_on_Chest_One_chest_empty"]
